Fix most broken anchors, some using a new React component that allows
Docusaurus to track inline anchors. See
https://github.com/facebook/docusaurus/blob/60499e2cdc52826a51b63113d5008e7faffa6dab/packages/docusaurus-module-type-aliases/src/index.d.ts#L272
Also, these docs which don't completely cover what you need to do:
https://docusaurus.io/docs/docusaurus-core#useBrokenLinks

I left one broken link because it would require changing a .md file to a
.mdx file. I wasn't sure how folks would feel about that.

--- a/docs/components/ALKiln/advanced.mdx
+++ b/docs/components/ALKiln/advanced.mdx
@@ -38,7 +38,7 @@ You don't have to choose just one way to run ALKiln, you can use all of them. He
 
 **What ALKiln is doing**
 
-([Moving](setup.mdx#diy-stages))
+([Moving](writing_tests.mdx#diy-stages))
 
 When you run Playground tests, they do the following:
 
@@ -76,7 +76,7 @@ These tests run on GitHub, but they still interact with your server and basicall
 
 **What ALKiln is doing**
 
-([Moving](setup.mdx#gNy-stages))
+([Moving](writing_tests.mdx#gNy-stages))
 
 Whenever you push (or commit) to GitHub, GitHub will run the tests automatically. You can also [trigger them manually](https://docs.github.com/en/actions/using-workflows/manually-running-a-workflow).
 
@@ -127,7 +127,7 @@ These tests also run on GitHub, but they create a new docassemble server on GitH
 
 **What ALKiln is doing**
 
-([Moving](setup.mdx#sandbox-stages))
+([writing_tests(setup.mdx#sandbox-stages))
 
 Like the other GitHub test method, whenever you push (or commit) to GitHub, GitHub will run the tests automatically. You can [run these manually](https://docs.github.com/en/actions/using-workflows/manually-running-a-workflow) as well.
 
