--- a/docs/components/ALKiln/troubleshooting.mdx
+++ b/docs/components/ALKiln/troubleshooting.mdx
@@ -177,7 +177,7 @@ Some possible causes:
 
 1. You have changed your code to remove a variable or value and have not yet updated your tests.
 
-  Look at the error message closely. Look at the [picture and HTML of the error page](#writing_tests.mdx#error-pics). Try to find the variable or value in your interview code or in the code of included or imported files. See if that variable or value is also in your test file.
+  Look at the error message closely. Look at the [picture and HTML of the error page](writing_tests.mdx#error-pics). Try to find the variable or value in your interview code or in the code of included or imported files. See if that variable or value is also in your test file.
 
 1. The field is hidden behind a `show if` of some kind.
 
